--- a/app/styles/app/popup.css
+++ b/app/styles/app/popup.css
@@ -26,8 +26,9 @@
   from {
     opacity: 0;
     -webkit-transform: scale(0.8);
-            transform: scale(0.8);
+    transform: scale(0.8);
   }
+
   to {
     opacity: 1;
   }
@@ -37,25 +38,28 @@
   from {
     opacity: 0;
     -webkit-transform: scale(0.8);
-            transform: scale(0.8);
+    transform: scale(0.8);
   }
+
   to {
     opacity: 1;
   }
 }
+
 .specialFadeIn {
   -webkit-animation-name: specialFadeIn;
-          animation-name: specialFadeIn;
+  animation-name: specialFadeIn;
 }
 
 @-webkit-keyframes specialFadeOut {
   from {
     opacity: 1;
   }
+
   to {
     opacity: 0;
     -webkit-transform: scale(0.8);
-            transform: scale(0.8);
+    transform: scale(0.8);
   }
 }
 
@@ -63,55 +67,61 @@
   from {
     opacity: 1;
   }
+
   to {
     opacity: 0;
     -webkit-transform: scale(0.8);
-            transform: scale(0.8);
+    transform: scale(0.8);
   }
 }
+
 .specialFadeOut {
   -webkit-animation-name: specialFadeOut;
-          animation-name: specialFadeOut;
+  animation-name: specialFadeOut;
 }
 
 @-webkit-keyframes specialSlideInRight {
   from {
     -webkit-transform: translate3d(10%, 0, 0);
-            transform: translate3d(10%, 0, 0);
+    transform: translate3d(10%, 0, 0);
     visibility: visible;
   }
+
   to {
     -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
 }
 
 @keyframes specialSlideInRight {
   from {
     -webkit-transform: translate3d(10%, 0, 0);
-            transform: translate3d(10%, 0, 0);
+    transform: translate3d(10%, 0, 0);
     visibility: visible;
   }
+
   to {
     -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
 }
+
 .specialSlideInRight {
   -webkit-animation-name: specialSlideInRight;
-          animation-name: specialSlideInRight;
+  animation-name: specialSlideInRight;
 }
 
 @-webkit-keyframes specialFadeInRight {
   from {
     opacity: 0;
     -webkit-transform: translate3d(10%, 0, 0);
-            transform: translate3d(10%, 0, 0);
+    transform: translate3d(10%, 0, 0);
   }
+
   to {
     opacity: 1;
     -webkit-transform: none;
-            transform: none;
+    transform: none;
   }
 }
 
@@ -119,23 +129,25 @@
   from {
     opacity: 0;
     -webkit-transform: translate3d(10%, 0, 0);
-            transform: translate3d(10%, 0, 0);
+    transform: translate3d(10%, 0, 0);
   }
+
   to {
     opacity: 1;
     -webkit-transform: none;
-            transform: none;
+    transform: none;
   }
 }
+
 .spceialFadeInRight {
   -webkit-animation-name: specialFadeInRight;
-          animation-name: specialFadeInRight;
+  animation-name: specialFadeInRight;
 }
 
 .menu-search-container.active {
   display: block;
   -webkit-animation-name: specialFadeOut;
-          animation-name: specialFadeOut;
+  animation-name: specialFadeOut;
   transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
@@ -154,215 +166,228 @@
 
 .menu-mac.is-closed {
   -webkit-animation-name: specialFadeIn;
-          animation-name: specialFadeIn;
+  animation-name: specialFadeIn;
   -webkit-animation-delay: 30ms;
-          animation-delay: 30ms;
+  animation-delay: 30ms;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
+
 .menu-mac.hidden {
   -webkit-animation-name: specialFadeOut;
-          animation-name: specialFadeOut;
+  animation-name: specialFadeOut;
   -webkit-animation-delay: 245ms;
-          animation-delay: 245ms;
+  animation-delay: 245ms;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
 .menu-iPad.is-closed {
   -webkit-animation-name: specialFadeIn;
-          animation-name: specialFadeIn;
+  animation-name: specialFadeIn;
   -webkit-animation-delay: 70ms;
-          animation-delay: 70ms;
+  animation-delay: 70ms;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
+
 .menu-iPad.hidden {
   -webkit-animation-name: specialFadeOut;
-          animation-name: specialFadeOut;
+  animation-name: specialFadeOut;
   -webkit-animation-delay: 210ms;
-          animation-delay: 210ms;
+  animation-delay: 210ms;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
 .menu-iPhone.is-closed {
   -webkit-animation-name: specialFadeIn;
-          animation-name: specialFadeIn;
+  animation-name: specialFadeIn;
   -webkit-animation-delay: 100ms;
-          animation-delay: 100ms;
+  animation-delay: 100ms;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
+
 .menu-iPhone.hidden {
   -webkit-animation-name: specialFadeOut;
-          animation-name: specialFadeOut;
+  animation-name: specialFadeOut;
   -webkit-animation-delay: 170ms;
-          animation-delay: 170ms;
+  animation-delay: 170ms;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
 .menu-watch.is-closed {
   -webkit-animation-name: specialFadeIn;
-          animation-name: specialFadeIn;
+  animation-name: specialFadeIn;
   -webkit-animation-delay: 130ms;
-          animation-delay: 130ms;
+  animation-delay: 130ms;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
+
 .menu-watch.hidden {
   -webkit-animation-name: specialFadeOut;
-          animation-name: specialFadeOut;
+  animation-name: specialFadeOut;
   -webkit-animation-delay: 130ms;
-          animation-delay: 130ms;
+  animation-delay: 130ms;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
 .menu-tv.is-closed {
   -webkit-animation-name: specialFadeIn;
-          animation-name: specialFadeIn;
+  animation-name: specialFadeIn;
   -webkit-animation-delay: 170ms;
-          animation-delay: 170ms;
+  animation-delay: 170ms;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
+
 .menu-tv.hidden {
   -webkit-animation-name: specialFadeOut;
-          animation-name: specialFadeOut;
+  animation-name: specialFadeOut;
   -webkit-animation-delay: 100ms;
-          animation-delay: 100ms;
+  animation-delay: 100ms;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
 .menu-support.is-closed {
   -webkit-animation-name: specialFadeIn;
-          animation-name: specialFadeIn;
+  animation-name: specialFadeIn;
   -webkit-animation-delay: 210ms;
-          animation-delay: 210ms;
+  animation-delay: 210ms;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
+
 .menu-support.hidden {
   -webkit-animation-name: specialFadeOut;
-          animation-name: specialFadeOut;
+  animation-name: specialFadeOut;
   -webkit-animation-delay: 70ms;
-          animation-delay: 70ms;
+  animation-delay: 70ms;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
 .menu-search.is-closed {
   -webkit-animation-name: specialFadeIn;
-          animation-name: specialFadeIn;
+  animation-name: specialFadeIn;
   -webkit-animation-delay: 245ms;
-          animation-delay: 245ms;
+  animation-delay: 245ms;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
+
 .menu-search.hidden {
   -webkit-animation-name: specialFadeOut;
-          animation-name: specialFadeOut;
+  animation-name: specialFadeOut;
   -webkit-animation-delay: 30ms;
-          animation-delay: 30ms;
+  animation-delay: 30ms;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
 .menu-store.is-closed {
   -webkit-animation-name: specialFadeIn;
-          animation-name: specialFadeIn;
+  animation-name: specialFadeIn;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
+
 .menu-store.hidden {
   -webkit-animation-name: specialFadeOut;
-          animation-name: specialFadeOut;
+  animation-name: specialFadeOut;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
 .menu-search-input {
   -webkit-animation-name: specialFadeInRight;
-          animation-name: specialFadeInRight;
+  animation-name: specialFadeInRight;
   -webkit-animation-duration: 400ms;
-          animation-duration: 400ms;
+  animation-duration: 400ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
   -webkit-animation-delay: 350ms;
-          animation-delay: 350ms;
+  animation-delay: 350ms;
 }
 
 .search-sub-menu h3 {
   -webkit-animation-name: specialFadeInRight;
-          animation-name: specialFadeInRight;
+  animation-name: specialFadeInRight;
   -webkit-animation-duration: 700ms;
-          animation-duration: 700ms;
+  animation-duration: 700ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
 .search-sub-menu ul li {
   -webkit-animation-name: specialFadeInRight;
-          animation-name: specialFadeInRight;
+  animation-name: specialFadeInRight;
   -webkit-animation-duration: 500ms;
-          animation-duration: 500ms;
+  animation-duration: 500ms;
   -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  animation-fill-mode: both;
 }
+
 .search-sub-menu ul li:nth-child(1) {
   -webkit-animation-delay: 0ms;
-          animation-delay: 0ms;
+  animation-delay: 0ms;
 }
+
 .search-sub-menu ul li:nth-child(2) {
   -webkit-animation-delay: 30ms;
-          animation-delay: 30ms;
+  animation-delay: 30ms;
 }
+
 .search-sub-menu ul li:nth-child(3) {
   -webkit-animation-delay: 50ms;
-          animation-delay: 50ms;
+  animation-delay: 50ms;
 }
+
 .search-sub-menu ul li:nth-child(4) {
   -webkit-animation-delay: 70ms;
-          animation-delay: 70ms;
+  animation-delay: 70ms;
 }
+
 .search-sub-menu ul li:nth-child(5) {
   -webkit-animation-delay: 90ms;
-          animation-delay: 90ms;
+  animation-delay: 90ms;
 }
 
 nav {
@@ -371,43 +396,49 @@ nav {
   right: 0;
   left: 0;
   height: 48px;
-  min-width: 1024px;
+
   background: rgba(0, 0, 0, 0.8);
   font-size: 18px;
 
 }
 
 .menu-container {
-  
+
   margin: 0 auto;
 
   max-width: 980px;
   padding: 11px 22px;
 }
+
 .menu-container ul {
   list-style: none;
 }
+
 .menu-container ul li {
   display: inline-block;
   text-align: center;
   width: auto;
   margin-right: 76px;
 }
+
 .menu-container ul li:last-child {
   margin-right: 0;
 }
+
 .menu-container ul li a {
   display: inline-block;
-  font-family: -apple-system, BlinkMacSystemFont,  "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",  "Fira Sans", "Droid Sans", "Helvetica Neue",  sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   text-decoration: none;
   color: #fff;
   font-weight: 100;
   font-size: 16px;
   float: left;
 }
+
 .menu-container ul li a:hover {
   color: #969696;
 }
+
 .menu-container.menu-apple {
   background-repeat: no-repeat;
   width: 20px;
@@ -420,11 +451,12 @@ nav {
 .menu-search-container {
   display: none;
   position: absolute;
-  top: 0;
+  top: 9px;
   left: 20.6667%;
   width: 56.66667%;
   z-index: 2;
 }
+
 .menu-search-container input {
   background-color: transparent;
   border: none;
@@ -433,14 +465,17 @@ nav {
   outline: none;
   color: #fff;
 }
+
 .menu-search-container a {
   color: #fff;
 }
+
 .menu-search-container a:first-child {
   display: block;
   float: left;
   padding-right: 10px;
 }
+
 .menu-search-container.active {
   display: block;
 }
@@ -460,17 +495,20 @@ nav {
   padding: 24px 0 15px;
   z-index: 1;
 }
+
 .search-sub-menu h3 {
   font-size: 12px;
   font-weight: 100;
   margin-top: 0;
   padding-left: 28px;
 }
+
 .search-sub-menu ul {
   margin: 0;
   padding: 0;
   width: 100%;
 }
+
 .search-sub-menu ul li {
   display: block;
   text-align: left;
@@ -478,6 +516,7 @@ nav {
   margin: 0;
   text-indent: 50px;
 }
+
 .search-sub-menu ul li a {
   font-size: 14px;
   color: #999;
@@ -485,10 +524,12 @@ nav {
   padding-top: 5px;
   padding-bottom: 5px;
 }
+
 .search-sub-menu ul li a:hover {
   background-color: #f2f2f2;
   color: #3392de;
 }
+
 .search-sub-menu ul li a:first-child {
   float: none;
   padding-right: 0;
@@ -524,4 +565,12 @@ h2 {
   display: block;
   background: blue;
   text-align: center;
+}
+
+.menu-search {
+  float: right;
+}
+
+.floatLeft{
+  float: left;
 }
